--- a/html/kopplingsschema.html
+++ b/html/kopplingsschema.html
@@ -7,12 +7,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Larmsystem</title>
+    <title>Källkod</title>
 </head>
 <body>
     <div class="wrapper">
         <div class="header">
-            <h1>Larmsystem</h1>
+            <h1>Källkod</h1>
         </div>
         <div id="mySidebar" class="sidebar"
             onmouseover="toggleSidebar()"
@@ -21,20 +21,10 @@
             <!--möjligt att pathen måste ändras när bertil har den--><a href ="/Users/davidpetersson/Documents/WebbProgrammering/digitalaSystemSida/Digitala System projekt, Larm.pdf"><span><i class="material-icons">info</i><span class="icon-text">Rapport</span></a> <br> <br>
             <a href="/Users/davidpetersson/Documents/WebbProgrammering/digitalaSystemSida/källkod.pdf"> <span><i class="material-icons">info</i><span class="icon-text">Källkod</span></a> <br> <br>
             <a href="kopplingsschema.html"><span><i class="material-icons">info</i><span class="icon-text">Kopplingsschema</span></a> <br> <br>
-
         </div>
 
         <div id="main" style="grid-row: 2;">
-        <h3>Välkommen hit!</h3>
-        <p>Vi har under vårterminen byggt och programmerat ett rörelsekänsligt larmsystem som både aktiveras samt avaktiveras 
-            med en sex-siffrig kod.
-        </p>
-        <p>Systemet är utvecklat för att likna ett hemlarm som skall upptäcka rörelser när larmet är aktiverat samt simulera att polisen
-            har blivit notifierad.
-        </p>
-        <img src="../img/20220526_184646.jpg" style="width:500px;height:600px;">
-        <p>Vi som arbetat på projektet är David Petersson, Karl Jergmo, Hugo Rolf och Rasmus Ivarsson</p>
-        <p>Handledare: Bertil Lindvall, Lars-Göran Larsson</p>
+         <img src="../img/koppling.jpg"style="width:750px;height:750px;">
         </div>
     </div>
     <script src="../js/index.js"></script>
